--- a/jupyter_notebooks/training.ipynb
+++ b/jupyter_notebooks/training.ipynb
@@ -2,16 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/kshitij/.local/lib/python3.8/site-packages/scipy/__init__.py:146: UserWarning: A NumPy version >=1.16.5 and <1.23.0 is required for this version of SciPy (detected version 1.24.4\n",
-      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n",
-      "/home/kshitij/.local/lib/python3.8/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "/home/tom/anaconda3/envs/pytorch/lib/python3.8/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
@@ -22,6 +20,8 @@
     "import json\n",
     "import torch\n",
     "import pickle\n",
+    "import numpy as np\n",
+    "from itertools import product\n",
     "sys.path.append(os.path.abspath(os.path.join(os.getcwd(),'..')))\n",
     "\n",
     "from collections import Counter\n",
@@ -1339,6 +1339,109 @@
     "    model_optimizer.step()\n",
     "\n",
     "    return loss.item() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def set_highest_to_one(tensor):\n",
+    "    max_val, max_idx = tensor.max(dim=1, keepdim=True)\n",
+    "    result = torch.zeros_like(tensor)\n",
+    "    result.scatter_(1, max_idx, 1)\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def class_accuracy(conf_matrix):\n",
+    "    \"\"\"\n",
+    "    Calculate accuracy for each class based on a confusion matrix.\n",
+    "\n",
+    "    Parameters:\n",
+    "    conf_matrix (numpy.ndarray): Confusion matrix.\n",
+    "\n",
+    "    Returns:\n",
+    "    list: List of accuracies for each class.\n",
+    "    \"\"\"\n",
+    "    diagonal = np.diag(conf_matrix)\n",
+    "\n",
+    "    row_sums = conf_matrix.sum(axis=1)\n",
+    "\n",
+    "    accuracies = diagonal / row_sums.astype(float)\n",
+    "\n",
+    "    return accuracies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def class_f1_score(conf_matrix, epsilon=1e-7):\n",
+    "    \"\"\"\n",
+    "    Calculate F1 score for each class based on a confusion matrix.\n",
+    "\n",
+    "    Parameters:\n",
+    "    conf_matrix (numpy.ndarray): Confusion matrix.\n",
+    "    epsilon (float): Smoothing term to avoid division by zero.\n",
+    "\n",
+    "    Returns:\n",
+    "    list: List of F1 scores for each class.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    tp = np.diag(conf_matrix)\n",
+    "    fp = conf_matrix.sum(axis=0) - tp\n",
+    "    fn = conf_matrix.sum(axis=1) - tp\n",
+    "\n",
+    "    precision = tp / (tp + fp + epsilon)\n",
+    "    recall = tp / (tp + fn + epsilon)\n",
+    "\n",
+    "    f1_scores = 2 * (precision * recall) / (precision + recall + epsilon)\n",
+    "\n",
+    "    return f1_scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def confusion_matrix(y_pred, y_true, num_classes):\n",
+    "    \"\"\"\n",
+    "    Create a confusion matrix for label encodings in PyTorch.\n",
+    "\n",
+    "    Parameters:\n",
+    "    y_pred (torch.Tensor): Predicted labels tensor.\n",
+    "    y_true (torch.Tensor): True labels tensor.\n",
+    "    num_classes (int): Number of classes.\n",
+    "\n",
+    "    Returns:\n",
+    "    numpy.ndarray: Confusion matrix.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    y_pred = set_highest_to_one(y_pred)\n",
+    "    \n",
+    "    if y_pred.shape != y_true.shape:\n",
+    "        raise ValueError(\"Shapes of predictions and true labels must match. y_pred shape: {y_pred.shape} y_true shape: {y_true.shape}\")\n",
+    "\n",
+    "    conf_matrix = np.zeros((num_classes, num_classes), dtype=np.int64)\n",
+    "\n",
+    "    y_pred_np = y_pred.cpu().numpy()\n",
+    "    y_true_np = y_true.cpu().numpy()\n",
+    "\n",
+    "    for pred, true in zip(y_pred_np, y_true_np):\n",
+    "        conf_matrix[pred, true] += 1\n",
+    "\n",
+    "    return conf_matrix"
    ]
   },
   {
@@ -5075,6 +5178,8 @@
    ],
    "source": [
     "all_losses = []\n",
+    "confusion_matrix = np.zeros(len(labels), len(labels))\n",
+    "test_data_size = 0.75\n",
     "for doc_index, doc in enumerate(data):\n",
     "    if doc_index > 10:\n",
     "        break\n",
@@ -5085,9 +5190,137 @@
     "        \n",
     "        sent_tensor = load_encoded('../train_document/doc' + str(doc_index), \"embed_\" + str(index))\n",
     "        target_encoded = load_encoded('../train_document/doc' + str(doc_index), \"target_\" + str(index))\n",
+    "        if index > len(train_document) * test_data_size:\n",
+    "            y_pred = model.forward(sent_tensor)\n",
+    "            conf_matrix_helper = confusion_matrix(y_pred, target_encoded, len(labels))\n",
+    "            confusion_matrix = np.add(confusion_matrix, conf_matrix_helper)\n",
+    "            continue\n",
     "        loss = train(model,model_optimizer,sent_tensor,target_encoded)\n",
     "        print(loss)\n",
     "        all_losses.append(loss)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def grid_search(parameters):\n",
+    "    keys = parameters.keys()\n",
+    "    values = parameters.values()\n",
+    "    \n",
+    "    combinations = list(product(*values))\n",
+    "    \n",
+    "    parameter_configurations = [{k: v for k, v in zip(keys, combination)} for combination in combinations]\n",
+    "    \n",
+    "    return parameter_configurations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def random_train_test_split(size, training_data_size):\n",
+    "    indices = np.arange(size)\n",
+    "    np.random.shuffle(indices)\n",
+    "    training_data_length = int(size * training_data_size)\n",
+    "    training_data_indices = indices[:training_data_length]\n",
+    "    test_data_indices = indices[training_data_length:]\n",
+    "    return training_data_indices, test_data_indices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_accuracy_value(item):\n",
+    "    return item[1][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def grid_search_train_test(data, labels, parameters):\n",
+    "    result = []\n",
+    "    parameter_configs = grid_search(parameters)\n",
+    "    \n",
+    "    for config in parameter_configs:\n",
+    "        train_indices, test_indices = random_train_test_split(data)\n",
+    "        model = CNN_BiLSTM(config)\n",
+    "        print(\"Working with: \")\n",
+    "        print(config)\n",
+    "        print(\"\\n\")\n",
+    "        \n",
+    "        \n",
+    "        for doc_index in train_indices:\n",
+    "            train_document = data[doc_index]['annotations'][0]['result']\n",
+    "            for index in range(0, len(train_document)):\n",
+    "                # training tensor --> sent_tensor\n",
+    "                # training target --> target_encoded\n",
+    "                \n",
+    "                sent_tensor = load_encoded('../train_document/doc' + str(doc_index), \"embed_\" + str(index))\n",
+    "                target_encoded = load_encoded('../train_document/doc' + str(doc_index), \"target_\" + str(index))\n",
+    "                loss = train(model,model_optimizer,sent_tensor,target_encoded)\n",
+    "                print(loss)\n",
+    "                all_losses.append(loss)\n",
+    "                \n",
+    "        for doc_index in test_indices:\n",
+    "            test_document = data[doc_index]['annotations'][0]['result']\n",
+    "            for index in range(0, len(test_document)):\n",
+    "                sent_tensor = load_encoded('../train_document/doc' + str(doc_index), \"embed_\" + str(index))\n",
+    "                target_encoded = load_encoded('../train_document/doc' + str(doc_index), \"target_\" + str(index))\n",
+    "                y_pred = model.forward(sent_tensor)\n",
+    "                conf_matrix_helper = confusion_matrix(y_pred, target_encoded, len(labels))\n",
+    "                confusion_matrix = np.add(confusion_matrix, conf_matrix_helper)\n",
+    "                \n",
+    "        accuracies = class_accuracy(confusion_matrix)\n",
+    "        f1_scores = class_f1_score(confusion_matrix)\n",
+    "        average_accuracy = np.mean(accuracies)\n",
+    "        average_f1 = np.mean(f1_scores)\n",
+    "        \n",
+    "        print(\"Accuracies: {accuracies} \\n Average acccuracy: {average_accuracy}\")\n",
+    "        print(\"F1 Scores: {f1_scores} \\n Average F1: {average_f1}\")\n",
+    "        \n",
+    "        result.append((config, (average_accuracy, average_f1)))\n",
+    "        \n",
+    "    return result\n",
+    "        \n",
+    "        \n",
+    "            \n",
+    "        \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parameter_configs = {\n",
+    "    'word_input_channels': [1, 2, 3],\n",
+    "    'word_output_channels': [1, 2, 3],\n",
+    "    'word_kernel_size': [(3, 1), (5, 1), (7, 1)],\n",
+    "    'sent_input_channels': [3, 4, 5],\n",
+    "    'sent_output_channels': [1, 2, 3],\n",
+    "    'input_size': [512, 768, 1024],\n",
+    "    'hidden_size': [128, 256, 512],\n",
+    "    'num_layers': [1, 2, 3]\n",
+    "    }\n",
+    "\n",
+    "result = grid_search_train_test(data, labels, parameter_configs)\n",
+    "\n",
+    "max_accuracy_config = max(result, key=get_accuracy_value)\n",
+    "\n",
+    "print(max_accuracy_config)"
    ]
   },
   {
@@ -5133,6 +5366,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0., 1., 0.],\n",
+      "        [0., 1., 0.],\n",
+      "        [0., 0., 1.]])\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -5155,7 +5405,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
